Small Boat Parts, MPQ34, Armor HP overhaul, Fixes

--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -2,6 +2,9 @@
 	@thrustDeviation = 0.015
 }
 
+@BULLET[5inchVTUS]:NEEDS[SMA] {
+	@subProjectileCount = 1
+}
 @BULLET[12.7mmBullet]:NEEDS[SMA] {
 	@explosive = False
 	@tntMass = 0
