--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -66,19 +66,13 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = AMT34, ARL44, bahaBrowningAnm2, BahaF86Launcher, bahaH70Launcher, bahaH70Turret, bahaTurret, Eland90BTurret, FlareCannon, IS2, IS7, Luft42, M42DusterAP, PantherII, T-10, T26E4, T-44, T-54, T92HMC, T95,  TigerII,TortoiseAPCBC, VickersMG, Wirbelwind
+			value = NAS_FlareBomb, NAS_AB_AN-Mk1_USN, NAS_DC_Mark9_USN, NAS_AB_HVAR_USN, NAS_AB_TinyTim_USN, NAS_DC_Type3_IJN, NAS_AB_Type99No80_IJN, ANM30, ANM57, ANM64, ANM65, WW2HVARRocket, WW2RP3Rocket
 		}
-    }
+	}
 	FILTER {
 		CHECK {
 			type = name
-			value = HS404, ShVAK-E, M2HB, MG131zTurret, MG151, MK103, WW2Ho155, WW2Ho3ExposedBarrel, WW2Ho5WingMount
-		}
-    }
-	FILTER {
-		CHECK {
-			type = name
-			value = tank_M41, tank_T54
+			value = PantherII, IS2, T-44, bahaH70Launcher, ARL44, TortoiseAPCBC, TigerII, T95, NAS_AA_MG_DShK1938_SN, NAS_AA_MG_50M2HBx2_USN, NAS_AA_MG_20FlaK38x4_KM, NAS_AA_MG_20Oerlikonx2_USN, NAS_AA_MG_25Type96x3_IJN, NAS_AA_MG_37SKC30_KM, NAS_AA_MG_66K_SN, NAS_AA_MG_37Breda_RM, NAS_AA_SC_105SKC33_KM, NAS_AA_DD_100x2_IJN, NAS_AA_MG_40Boforsx2_RN, NAS_AA_MG_40Boforsx4_USN, NAS_AA_MG_QF2pdrx8_RN, NAS_AA_SC_3inchMark21_USN, NAS_AA_SC_90A1938_RM, NAS_BB_356x2_IJN, NAS_BB_380M1935x4_FNFL, NAS_BB_380x2_KM, NAS_BB_381x3_RM, NAS_BB_406x3Mk7_USN, NAS_BB_410x2_IJN, NAS_BB_460x3_IJN, NAS_BB_BL14Mk7x4_RN, NAS_BB_BL15Mk1x2_RN, NAS_BB_BL16MkIx3_RN, NAS_BC_283x3_KM, NAS_CA_180B-1-P_SN, NAS_CA_203x2_IJN, NAS_CA_203x2_KM, NAS_CA_203x3Mk16_USN, NAS_CB_12inx3Mk8_USN, NAS_CD_105SKL40_CN, NAS_CL_140x2_IJN, NAS_CL_152x3Mk16_USN, NAS_CL_155x3_IJN, NAS_CL_BL6inMk21x2_ROCN, NAS_CL_KN152_ROCN, NAS_DD_127_USN, NAS_DD_127x2_IJN, NAS_DD_127x2_USN, NAS_DD_130B-2LM_SN, NAS_DD_QF45_RN, NAS_FD_356FortDrum_USA, AMT34, IS7, HS404, M2HB, MG151, MK103, T92HMC, T26E4, T-54, ShVAK-E, VickersMG, Luft42, Wirbelwind, BahaF86Launcher, bahaTurret
 		}
     }
 }
@@ -94,7 +88,7 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = jamm_alt28, aam_AIM4A, aam_AIM9B, aam_Firestreak, aam_K5, aam_R511, aam_VelvetGlove, agm_AUMN2, agm_KS1, sam_BloodhoundMk1, sam_CIM10, sam_FIM43, sam_MIM3, sam_RIM2, sam_S25, ssm_SS11, bahaMk82Bomb, bahaMk82BombBrake
+			value = jamm_alt28, aam_AIM4A, aam_AIM9B, aam_Firestreak, aam_RS1U, aam_R511, aam_VelvetGlove, agm_AUMN2, agm_KS1, sam_BloodhoundMk1, sam_CIM10, sam_FIM43, sam_MIM3, sam_RIM2, sam_5V7, ssm_SS11, bahaMk82Bomb, bahaMk82BombBrake
 		}
     }
 	FILTER {
@@ -106,15 +100,17 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = tank_CenturionMk10, tank_EBR90, tank_M48, tank_PT76, tank_T54, Amx50B, AmxELCbis, BatChat25, FV4005, M103, Obj268, Strids74, T-10, T57AP-T
+			value = AmxELCbis, BatChat25, M42DusterAP, Strids74, Amx50B, FV4005, M103, Obj268, T-10, tank_EBR90, tank_M48, tank_PT76, tank_CenturionMk10, tank_T54, bahaBrowningAnm2
 		}
     }
 		FILTER {
 		CHECK {
 			type = name
-			value = air_ADEN, air_AN/M3, air_DEFA, air_M39A1, air_N-37, air_NR-30, air_NS-23, bahaGatlingGun, TU423
+			value = air_ADEN, air_AN/M3, air_DEFA, air_M39A1, air_N-37, air_NR-30, air_NS-23, bahaGatlingGun, bahaHiddenVulcan, TU423
 		}
     }
+
+
 }
 SUBCATEGORY {
     name = 60'
@@ -128,22 +124,24 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = aam_AIM7E, aam_AIM9D, aam_R3R, aam.R3S, aam_R530 ,aam_R530E, aam.R98R, aam.R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, sam_9M32, sam_3M8, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, sam_5V21, ssm_9M14, ssm_Swingfire, 4K40Termit, S125NevaMissile, SkudD, BristolBloodhound
+			value = 4K40Termit, aam_AIM7E, aam_AIM9D, aam_R3R, aam_R3S, aam_R530, aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, S125NevaMissile, sam_3M8, sam_5V21, sam_9M38, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, SkudD, ssm_9M14, ssm_Swingfire
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = air_GSh23L, air_M61A1, tank_AMX30, tank_ChieftainMk3, tank_Leopard1A0, tank_Leopard1A1, tank_M41, tank_M551, tank_M60A1, tank_T62, T62M1, T-64, 59-94, O120, Obj906, Ru251, D30, bahaM102Howitzer, Leopard1, Elden40, theotomelara76compact, mk19Turret, M113GunTurret, CROWS7_62, APC30Cg2A42, ShilkaZSU234turret, AK230, M163VADS, bahaHiddenVulcan
+			value = air_GSh23L, AK230, APC30Cg2A42, bahaH70Turret, bahaM102Howitzer, CROWS7_62, D30, Eland90BTurret, Elden40, Leopard1, M113GunTurret, M163VADS, mk19Turret, O120, Obj906, Ru251, ShilkaZSU234turret, T-64, T57AP-T, tank_AMX30, tank_ChieftainMk3, tank_Leopard1A0, tank_Leopard1A1, tank_M41, tank_M551, tank_M60A1, tank_T62, theotomelara76compact
 		}
     }
 	FILTER {
 		CHECK {
 			type = name
-			value = jamm_sps141, jamm_smalta5, jamm_alt34, search_aps95, search_liana, search_p70, search_type85, surv_fps27, surv_p40, trg_ai23, trg_anapq100, trg_rp21, Elden40, KUB2K12, M163VADS, ShilkaZSU234turret, 60BeamGuidance, rec_avq10
+			value = Elden40, KUB2K12, M163VADS, search_aps95, search_liana, search_p70, search_type85, ShilkaZSU234turret, surv_fps27, surv_p40, trg_ai23, trg_anapq100, trg_rp21, 60BeamGuidance, rec_avq10, jamm_alt34, jamm_smalta5, jamm.sps141
 		}
     }
 }
+
+
 SUBCATEGORY {
     name = 70'
     icon = number7
@@ -156,25 +154,19 @@ SUBCATEGORY {
     FILTER {
 		CHECK {
 			type = name
-			value = tank_M60A2, M60A3, M60A3120, MBT-70, HSTVAP, SMsT80Turret, AAV7turret20, AK100a18, AK176,  bahaS-8Launcher, AK630, AK639QB1, BDAcGKmk2
+			value = AAV7turret20, AK100a18, AK176, AK630, bahaGau-8, bahaOMillennium, bahaS-8Launcher, BDAcGKmk2, Bk27, FA-18C, GSH301, HSTV, M60A3, M60A3120, MBT-70, SMsT80Turret, tank_M60A2, UPK-23
 		}
     }
 	FILTER {
 		CHECK {
 			type = name
-			value = Bk27, bahaGau-8, UPK-23, GSH301, A-18C
-		}
-    }
-	FILTER {
-		CHECK {
-			type = name
-			value = aam_AIM9L, aam_R23R, aam_R40R, aam_R40T, aam_R550, aam_R98MR, aam_R98MT, sam_3M9, bahaAGM-65, bahaAim9, bahaTowMissile, 9M114, VA-111, MK48 Torpedo
+			value = 9M114, aam_AIM9L, aam_R23R, aam_R40R, aam_R40T, aam_R550, aam_R98MR, aam_R98MT, bahaAGM-65, bahaTowMissile, MK48 Torpedo, sam_3M9, VA-111
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = jamm_ari23246, jamm_sps161, jamm_alq135, jamm_alq99, rec_aas38, 70BeamGuidance,bahaECMJammer, Type-AdvancedFlanker, AESA, bdRadome1, bdRadome1inline, bdRadome1snub, NMB-F14D
+			value = AESA, bdRadome1, bdRadome1inline, bdRadome1snub, jamm_alq135, jamm_alq99, jamm_ari23246, jamm_sps161, rec_aas38, 70BeamGuidance, awacsRadar
 		}
     }
 }
@@ -190,19 +182,19 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = aam_AIM9M, bahaRBS-15Cruise, bahaRBS-15ALCruise, StingRayBDATorpedo, PL-8B, YJ9, 9M120, 9M121, THERIM-67B, AtakaAT
+			value = 9M120, 9M121, aam_AIM9M, ALASM, bahaAGM-114, bahaAgm86B, bahaClusterBomb, bahaHarm, bahaRBS-15ALCruise, bahaRBS-15Cruise, PL-8B, StingRayBDATorpedo, THERIM-67B, YJ9
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = 89Zjq, AK130turret, bahaGoalKeeper, bahaM1Abrams, bahaM230ChainGun, BMP3HE, BMP75mmTurret, BradleyActive, FV510Turret, GoalKeeperBDAcMk1, GSH230, HVUA30CG, M1SM1Turret, M1SMA, M3Bradly, SMTunguskaAAMT, thephalanx
+			value = 89Zjq, AK130turret, bahaGoalKeeper, bahaM1Abrams, bahaM230ChainGun, BMP3HE, BMP75mmTurret, BradleyActive, FV510Turret, GoalKeeperBDAcMk1, GSH230, HVUA30CG, M1SM1Turret, M1SMA, M3Bradly, SMTunguskaAAMT, theotomelara76rapid, thephalanx
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = jamm_l175v, rec_atlis2, 80BeamGuidance, bahaGoalKeeper, FA-18C, SMTunguskaAAMT, STIRradar, thephalanx, Type-AdvancedFlanker
+			value = bahaGoalKeeper, SMTunguskaAAMT, STIRradar, thephalanx, jamm.l175v, jamm.stealth, rec_atlis2, 80BeamGuidance
 		}
     }	
 }
@@ -218,19 +210,19 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = AbramsA2, KORD, Leopard2A5, Luft9040c
+			value = AbramsA2, AK190, KORD, Leopard2A5, Luft9040c, T-90
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = aam_AIM9P, sam_9M317, bahaJdamMk83, HQ-9, YJ-83, YJ-83K, YU-7, MICA_IR, KH-41, THERIM-116, MK58 Torpedo
+			value = aam_AIM9P, bahaJdamMk83, HQ-9, KH-41, MICA_IR, MK58 Torpedo, sam_9M32, THERIM-116, YJ-83, YJ-83K, YU6
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = 90BeamGuidance, rec_aaq28, jamm_spectra, jamm_apq181, J10C, Type-22Cockpit, APARradar, BDAcGKmk2, CB90BOAT, Luft9040c, smartsradar, SU30cockpit
+			value = APARradar, BDAcGKmk2, CB90BOAT, Luft9040c, smartsradar, jamm_apq181, jamm_spectra, 90BeamGuidance, rec_aaq28
 		}
     }	
 }
@@ -241,19 +233,26 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = bahaPac-3, FT1250KG, FT1500KG, HQ-19, LS6, PL-10A, PL-12 ,YU6, RVV-AE-PD, SS-26, AIM9X, TOW2B, MK56 Torpedo
+			value = AIM9X, bahaAim120, bahaPac-3, FT1250KG, FT1500KG, HQ-19, LS6, MK56 Torpedo, PL-10A, PL-12, RVV-AE-PD, SS-26, TOW2B, YU-7
 		}
     }
 	FILTER {
 		CHECK {
 			type = name
-			value = bahaOMillennium, CH-100MM, CROWS, CROWS-30MM, H/PJ-38, LD2000, Leopard2A6, PGZ-07, PLZ05, T-90, ZBL09
+			value = 2S25turret, bahaABL, CH-100MM, CROWS, CROWS-30MM, LD2000, PGZ-07, PLZ05, ZBL09
 		}
     }
 	FILTER {
 		CHECK {
 			type = name
-			value = rec_damocles, 00BeamGuidance, jamm_alq218, bdRadome1GA, bdRadome1inlineGA, bdRadome1snubGA, J10C, LD2000, PGZ-07, RADAR346B, SEARAMLauncherTurret, SuperFlanker, Type-22Cockpit, Type-57-Cockpit
+			value = AIM-120D, HHQ-10, HHQ16C, HHQ17, HHQ19RCS, LRASM-A, LRASM-AS, METEOR, PL-15, SMA57E6BGM, X51A, YJ12, YJ18
+		}
+    }
+
+	FILTER {
+		CHECK {
+			type = name
+			value = bdRadome1GA, bdRadome1inlineGA, bdRadome1snubGA, LD2000, PGZ-07, RADAR346B, SEARAMLauncherTurret, jamm_alq218, jamm_stealth2, rec_damocles, 00BeamGuidance
 		}
     }
 }
@@ -269,13 +268,13 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = T90MS, ZTZ15_Turret
+			value = 99A2turret, H/PJ-38, T90MS, ZTZ15_Turret
 		}
     }	
 	FILTER {
 		CHECK {
 			type = name
-			value = HJ-10, HHQ-10, PL-15, YJ12, YJ18, METEOR, AIM-120D, HHQ16C, HHQ16CPBR, HHQ17, HHQ19, HHQ19RCS, LRASM-A, LRASM-AS, LRASM-B, LRASM-BS, X51A, SMA57E6BGM
+			value = AIM-120D, HHQ-10, HHQ16C, HHQ17, HHQ19RCS, LRASM-A, LRASM-AS, METEOR, PL-15, SMA57E6BGM, X51A, YJ12, YJ18, KD20
 		}
     }	
 }
@@ -285,15 +284,25 @@ SUBCATEGORY {
     FILTER {
 		CHECK {
 			type = name
-			value = jamm_ngj, SUPER-SYLPH, 20BeamGuidance
+			value = jamm_ngj, 20BeamGuidance
 		}
     }
 	FILTER {
 		CHECK {
 			type = name
-			value = aam_AIM9X, bahaABL
+			value = LRASM-B, LRASM-BS, 3XLASER, bdImpulseGun
 		}
     }	
+}
+SUBCATEGORY {
+    name = 30'
+    icon = number3
+    FILTER {
+		CHECK {
+			type = name
+			value = Rail176
+		}
+    }
 }
 
 CATEGORY {
