--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -643,6 +643,90 @@ MODULE {
 		}
 	}
 }
+//60s AN/MPQ-34	
+PART {
+// --- general parameters ---
+name = surv_mpq34
+module = Part
+author = Toonu
+
+// --- asset parameters ---
+rescaleFactor = 1
+
+// --- node definitions ---
+node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1, 1, 1
+node_attach = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 0, 1
+
+// --- editor parameters ---
+TechRequired = precisionEngineering
+entryCost = 2100
+cost = 600
+category = none
+bdacategory = Radars
+subcategory = 0
+bulkheadProfiles = srf
+title = AN/MPQ-34
+manufacturer = Kerbal Kombat Anthology
+description = Large surveillance radar with impressive performance. Maximum detection and lock range is 370km.
+attachRules = 1,1,0,0,1
+
+// --- standard part parameters ---
+mass = 1.45
+dragModelType = default
+maximum_drag = 0.2
+minimum_drag = 0.2
+angularDrag = 2
+crashTolerance = 7
+maxTemp = 3600
+
+MODEL {
+	model = KKA/Radars/MPQ34
+}
+MODULE {
+        name = ModuleRadar
+        rotationTransformName = rotationTransform
+		
+		radarName = AN/MPQ-34 Surveillance Radar
+		rwrThreatType = 0
+		canRecieveRadarData = true
+		omnidirectional = true
+		directionalFieldOfView = 1.4
+		resourceDrain = 0.2
+		
+		canLock = true
+		canTrackWhileScan = false
+		lockRotationSpeed = 36			
+		lockRotationAngle = 1.4
+		maxLocks = 1
+		multiLockFOV = 30
+		lockAttemptFOV = 2
+		
+		canScan = true
+		scanRotationSpeed = 36
+		radarGroundClutterFactor = 0.1
+		showDirectionWhileScan = false
+		
+		radarDetectionCurve {
+			key = 0 0 0 0.4812012
+			key = 15 10 1.916362 3.112249
+			key = 20 20 1.688488 1.132845
+			key = 30 30 0.7996811 0.7967879
+			key = 38 40 0.5183703 0.588104
+			key = 90 75 0.9233715 1.209759
+			key = 370 350 0.4916398 2.040136
+		}
+		radarLockTrackCurve {
+			key = 0 0 0 0.5163596
+			key = 10 10 1.916362 1.258301
+			key = 16 20 1.688488 1.132845
+			key = 25 30 0.7996811 1.342534
+			key = 32 40 0.5183703 0.588104
+			key = 70 75 0.9233715 0.4763535
+			key = 270 200 0.6670372 0.7264912
+			key = 370 300 0.4916398 2.040136
+		}
+	}
+}
 
 //60s AN/FPS-27
 +PART[scanLockRadar1] {
@@ -780,6 +864,7 @@ MODULE {
 		}
 	}
 }
+
 
 
 //Ground search
