--- a/Missiles/agm_KS1.cfg
+++ b/Missiles/agm_KS1.cfg
@@ -27,7 +27,7 @@ PART {
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = 4К87 Kometa
+	title = 4K87 Kometa
 	manufacturer = Kerbal Kombat Anthology
 	description = The Raduga 4К87 / KS-1 "Kometа" (SA-1) "Kennel" is a Soviet made 50's Air-to-Ground. If it looks familiar to you then you would be right, it's basically a MiG-15 with more explosives inside a 4G52 warhead and less man. Warranty void if manned.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
