--- a/EW/ShipHulls.cfg
+++ b/EW/ShipHulls.cfg
@@ -1,116 +1,287 @@
-+PART[mediumbow]:AFTER[SMA] {
+@PART[mediumbow]:AFTER[SMA] {
+	@name = mediumbowdd
+	@title = Destroyer Bow
+	@description = Destroyer Bow
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[mediumhelostern]:AFTER[SMA] {
+	@name = mediumhelosterndd
+	@title = Destroyer Helicopter Stern
+	@description = Destroyer Stern
+	scale = 0.75
+	%rescaleFactor = 0.75
+
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[mediumhull]:AFTER[SMA] {	
+	@name = mediumhulldd
+	@title = Destroyer Hull
+	@description = Destroyer Hull
+	scale = 0.75
+	%rescaleFactor = 0.75
+
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 55000
+	}
+}
+@PART[mediumhullshort]:AFTER[SMA] {
+	@name = mediumhullshortdd
+	@title = Destroyer Short Hull
+	@description = Destroyer Short Hull
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[mediumstern]:AFTER[SMA] {
+	@name = mediumsterndd
+	@title = Destroyer Stern
+	@description = Destroyer Stern
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[MedBowRevB]:AFTER[SMA] {
+	@name = MedBowRevBdd
+	@title = Destroyer Bow v2
+	@description = Destroyer Bow v2
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[MedHullLCSModule2]:AFTER[SMA] {
+	@name = MedHullLCSModule2dd
+	@title = Destroyer Hull LCS Module 2
+	@description = Destroyer Hull LCS Module 2
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[mediumsternHangarShort]:AFTER[SMA] {
+	@name = mediumsternHangarShortdd
+	@title = Destroyer Stern Hangar
+	@description = Destroyer Stern Hangar
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[mediumsternHangarLong]:AFTER[SMA] {
+	@name = mediumsternHangarLongdd
+	@title = Destroyer Stern Hangar Long
+	@description = Destroyer Stern Hangar
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[MedLCSmodule1]:AFTER[SMA] {
+	@name = MedLCSmodule1dd
+	@title = Destroyer LCS Module
+	@description = Destroyer LCS Module
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[MedLCSmodule1B]:AFTER[SMA] {
+	@name = MedLCSmodule1Bdd
+	@title = Destroyer LCS Module B
+	@description = Destroyer LCS Module B
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[MedLCSmodule2]:AFTER[SMA] {
+	@name = MedLCSmodule2dd
+	@title = Destroyer LCS Module 2
+	@description = Destroyer LCS Module 2
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+@PART[mediumhullshortvls]:AFTER[SMA] {
+	@name = mediumhullshortvlsdd
+	@title = Destroyer VLS Hull Module
+	@description = Destroyer VLS Module
+	scale = 0.75
+	%rescaleFactor = 0.75
+	
+	@MODULE[HitpointTracker]{
+		%maxHitPoints = 50000
+	}
+}
+
+//CC
++PART[mediumbowdd]:AFTER[SMA] {
 	@name = mediumccbow
 	@title = Cruiser Bow
 	@description = Cruiser Bow
+	scale = 1
+	%rescaleFactor = 1
 	
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumhelostern]:AFTER[SMA] {
++PART[mediumhelosterndd]:AFTER[SMA] {
 	@name = mediumcchelostern
 	@title = Cruiser Helicopter Stern
 	@description = Cruiser Stern
+	scale = 1
+	%rescaleFactor = 1
 
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumhull]:AFTER[SMA] {	
++PART[mediumhulldd]:AFTER[SMA] {	
 	@name = mediumcchull
 	@title = Cruiser Hull
 	@description = Cruiser Hull
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 77000
 	}
 }
-+PART[mediumhullshort]:AFTER[SMA] {
++PART[mediumhullshortdd]:AFTER[SMA] {
 	@name = mediumcchullshort
 	@title = Cruiser Short Hull
 	@description = Cruiser Short Hull
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumstern]:AFTER[SMA] {
++PART[mediumsterndd]:AFTER[SMA] {
 	@name = mediumccstern
 	@title = Cruiser Stern
 	@description = Cruiser Stern
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedBowRevB]:AFTER[SMA] {
++PART[MedBowRevBdd]:AFTER[SMA] {
 	@name = MedBowRevBcc
 	@title = Cruiser Bow v2
 	@description = Cruiser Bow v2
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedHullLCSModule2]:AFTER[SMA] {
++PART[MedHullLCSModule2dd]:AFTER[SMA] {
 	@name = MedHullLCSModule2cc
 	@title = Cruiser Hull LCS Module 2
 	@description = Cruiser Hull LCS Module 2
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumsternHangarShort]:AFTER[SMA] {
++PART[mediumsternHangarShortdd]:AFTER[SMA] {
 	@name = mediumsternHangarShortcc
 	@title = Cruiser Stern Hangar
 	@description = Cruiser Stern Hangar
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumsternHangarLong]:AFTER[SMA] {
++PART[mediumsternHangarLongdd]:AFTER[SMA] {
 	@name = mediumsternHangarLongcc
 	@title = Cruiser Stern Hangar Long
 	@description = Cruiser Stern Hangar
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedLCSmodule1]:AFTER[SMA] {
++PART[MedLCSmodule1dd]:AFTER[SMA] {
 	@name = MedLCSmodule1cc
 	@title = Cruiser LCS Module
 	@description = Cruiser LCS Module
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedLCSmodule1B]:AFTER[SMA] {
++PART[MedLCSmodule1Bdd]:AFTER[SMA] {
 	@name = MedLCSmodule1Bcc
 	@title = Cruiser LCS Module B
 	@description = Cruiser LCS Module B
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[MedLCSmodule2]:AFTER[SMA] {
++PART[MedLCSmodule2dd]:AFTER[SMA] {
 	@name = MedLCSmodule2cc
 	@title = Cruiser LCS Module 2
 	@description = Cruiser LCS Module 2
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
 }
-+PART[mediumhullshortvls]:AFTER[SMA] {
++PART[mediumhullshortvlsdd]:AFTER[SMA] {
 	@name = mediumhullshortvlscc
 	@title = Cruiser VLS Hull Module
 	@description = Cruiser VLS Module
-	
+	scale = 1
+	%rescaleFactor = 1
+
 	@MODULE[HitpointTracker]{
 		%maxHitPoints = 70000
 	}
@@ -119,7 +290,7 @@
 
 //BB
 
-+PART[mediumbow]:AFTER[SMA] {
++PART[mediumbowdd]:AFTER[SMA] {
 	@name = mediumbbbow
 	@title = Battleship Bow
 	@description = Battleship Bow
@@ -130,7 +301,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumhelostern]:AFTER[SMA] {
++PART[mediumhelosterndd]:AFTER[SMA] {
 	@name = mediumbbhelostern
 	@title = Battleship Helicopter Stern
 	@description = Battleship Stern
@@ -141,7 +312,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumhull]:AFTER[SMA] {	
++PART[mediumhulldd]:AFTER[SMA] {	
 	@name = mediumbbhull
 	@title = Battleship Hull
 	@description = Battleship Hull
@@ -152,7 +323,7 @@
 		%maxHitPoints = 99000
 	}
 }
-+PART[mediumhullshort]:AFTER[SMA] {
++PART[mediumhullshortdd]:AFTER[SMA] {
 	@name = mediumbbhullshort
 	@title = Battleship Short Hull
 	@description = Battleship Short Hull
@@ -163,7 +334,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumstern]:AFTER[SMA] {
++PART[mediumsterndd]:AFTER[SMA] {
 	@name = mediumbbstern
 	@title = Battleship Stern
 	@description = Battleship Stern
@@ -174,7 +345,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedBowRevB]:AFTER[SMA] {
++PART[MedBowRevBdd]:AFTER[SMA] {
 	@name = MedBowRevBbb
 	@title = Battleship Bow v2
 	@description = Battleship Bow v2
@@ -185,7 +356,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedHullLCSModule2]:AFTER[SMA] {
++PART[MedHullLCSModule2dd]:AFTER[SMA] {
 	@name = MedHullLCSModule2bb
 	@title = Battleship Hull LCS Module 2
 	@description = Battleship Hull LCS Module 2
@@ -196,7 +367,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumsternHangarShort]:AFTER[SMA] {
++PART[mediumsternHangarShortdd]:AFTER[SMA] {
 	@name = mediumsternHangarShortbb
 	@title = Battleship Stern Hangar
 	@description = Battleship Stern Hangar
@@ -207,7 +378,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumsternHangarLong]:AFTER[SMA] {
++PART[mediumsternHangarLongdd]:AFTER[SMA] {
 	@name = mediumsternHangarLongbb
 	@title = Battleship Stern Hangar Long
 	@description = Battleship Stern Hangar
@@ -218,7 +389,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedLCSmodule1]:AFTER[SMA] {
++PART[MedLCSmodule1dd]:AFTER[SMA] {
 	@name = MedLCSmodule1bb
 	@title = Battleship LCS Module
 	@description = Battleship LCS Module
@@ -229,7 +400,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedLCSmodule1B]:AFTER[SMA] {
++PART[MedLCSmodule1Bdd]:AFTER[SMA] {
 	@name = MedLCSmodule1Bbb
 	@title = Battleship LCS Module B
 	@description = Battleship LCS Module B
@@ -240,7 +411,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[MedLCSmodule2]:AFTER[SMA] {
++PART[MedLCSmodule2dd]:AFTER[SMA] {
 	@name = MedLCSmodule2bb
 	@title = Battleship LCS Module 2
 	@description = Battleship LCS Module 2
@@ -251,7 +422,7 @@
 		%maxHitPoints = 90000
 	}
 }
-+PART[mediumhullshortvls]:AFTER[SMA] {
++PART[mediumhullshortvlsdd]:AFTER[SMA] {
 	@name = mediumhullshortvlsbb
 	@title = Battleship VLS Hull Module
 	@description = Cruiser VLS Module
@@ -264,7 +435,7 @@
 }
 //BC
 
-+PART[mediumbow]:AFTER[SMA] {
++PART[mediumbowdd]:AFTER[SMA] {
 	@name = mediumbcbow
 	@title = Battlecruiser Bow
 	@description = Battlecruiser Bow
@@ -275,7 +446,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumhelostern]:AFTER[SMA] {
++PART[mediumhelosterndd]:AFTER[SMA] {
 	@name = mediumbchelostern
 	@title = Battlecruiser Helicopter Stern
 	@description = Battlecruiser Stern
@@ -286,7 +457,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumhull]:AFTER[SMA] {	
++PART[mediumhulldd]:AFTER[SMA] {	
 	@name = mediumbchull
 	@title = Battlecruiser Hull
 	@description = Battlecruiser Hull
@@ -297,7 +468,7 @@
 		%maxHitPoints = 88000
 	}
 }
-+PART[mediumhullshort]:AFTER[SMA] {
++PART[mediumhullshortdd]:AFTER[SMA] {
 	@name = mediumbchullshort
 	@title = Battlecruiser Short Hull
 	@description = Battlecruiser Short Hull
@@ -308,7 +479,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumstern]:AFTER[SMA] {
++PART[mediumsterndd]:AFTER[SMA] {
 	@name = mediumbcstern
 	@title = Battlecruiser Stern
 	@description = Battlecruiser Stern
@@ -319,7 +490,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedBowRevB]:AFTER[SMA] {
++PART[MedBowRevBdd]:AFTER[SMA] {
 	@name = MedBowRevbcb
 	@title = Battlecruiser Bow v2
 	@description = Battlecruiser Bow v2
@@ -330,7 +501,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedHullLCSModule2]:AFTER[SMA] {
++PART[MedHullLCSModule2dd]:AFTER[SMA] {
 	@name = MedHullLCSModule2bc
 	@title = Battlecruiser Hull LCS Module 2
 	@description = Battlecruiser Hull LCS Module 2
@@ -341,7 +512,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumsternHangarShort]:AFTER[SMA] {
++PART[mediumsternHangarShortdd]:AFTER[SMA] {
 	@name = mediumsternHangarShortbc
 	@title = Battlecruiser Stern Hangar
 	@description = Battlecruiser Stern Hangar
@@ -352,7 +523,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumsternHangarLong]:AFTER[SMA] {
++PART[mediumsternHangarLongdd]:AFTER[SMA] {
 	@name = mediumsternHangarLongbc
 	@title = Battlecruiser Stern Hangar Long
 	@description = Battlecruiser Stern Hangar
@@ -363,7 +534,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedLCSmodule1]:AFTER[SMA] {
++PART[MedLCSmodule1dd]:AFTER[SMA] {
 	@name = MedLCSmodule1bc
 	@title = Battlecruiser LCS Module
 	@description = Battlecruiser LCS Module
@@ -374,7 +545,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedLCSmodule1B]:AFTER[SMA] {
++PART[MedLCSmodule1Bdd]:AFTER[SMA] {
 	@name = MedLCSmodule1bcb
 	@title = Battlecruiser LCS Module B
 	@description = Battlecruiser LCS Module B
@@ -385,7 +556,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[MedLCSmodule2]:AFTER[SMA] {
++PART[MedLCSmodule2dd]:AFTER[SMA] {
 	@name = MedLCSmodule2bc
 	@title = Battlecruiser LCS Module 2
 	@description = Battlecruiser LCS Module 2
@@ -396,7 +567,7 @@
 		%maxHitPoints = 80000
 	}
 }
-+PART[mediumhullshortvls]:AFTER[SMA] {
++PART[mediumhullshortvlsdd]:AFTER[SMA] {
 	@name = mediumhullshortvlsbc
 	@title = Battlecruiser VLS Hull Module
 	@description = Cruiser VLS Module
