Fixing bullets and SBP color variations bug.

--- a/EW/Balancing/MM_Bullets.cfg
+++ b/EW/Balancing/MM_Bullets.cfg
@@ -1,7 +1,12 @@
 @ROCKET[8KOMS]:NEEDS[SMA] {
 	@thrustDeviation = 0.015
 }
-
+@BULLET[105mmGSBullet]:NEEDS[SMA] {
+	@subProjectileCount = 1
+}
+@BULLET[35x228AHEADBullet]:NEEDS[SMA] {
+	@subProjectileCount = 1
+}
 @BULLET[5inchVTUS]:NEEDS[SMA] {
 	@subProjectileCount = 1
 }
