--- a/Ships/MM.cfg
+++ b/Ships/MM.cfg
@@ -1,11 +1,52 @@
 VARIANTTHEME {
-	name = Gray
-	displayName = Gray 5-SB
-	description = Gray 5-SB
+	name = Grey5SB
+	displayName = Grey 5-SB
+	description = Grey 5-SB
 	primaryColor = #d5d5d5
 	secondaryColor = #384864
 }
-
+VARIANTTHEME {
+	name = WhiteHull
+	displayName = White
+	description = White
+	primaryColor = #d5d5d5
+	secondaryColor = #d5d5d5
+}
+VARIANTTHEME {
+	name = Planks
+	displayName = Planks
+	description = Planks
+	primaryColor = #d5d5d5
+	secondaryColor = #8c5f40
+}
+VARIANTTHEME {
+	name = Grey5D
+	displayName = Grey 5-D
+	description = Grey 5-D
+	primaryColor = #737985
+	secondaryColor = #d5d5d5
+}
+VARIANTTHEME {
+	name = Grey5DB
+	displayName = Grey 5-D
+	description = Grey 5-D
+	primaryColor = #737985
+	secondaryColor = #384864
+}
+VARIANTTHEME {
+	name = SeaBlue5S
+	displayName = Sea Blue
+	description = Sea Blue 5-S
+	primaryColor = #52617c
+	secondaryColor = #d5d5d5
+}
+VARIANTTHEME {
+	name = ThayerBlue5B
+	displayName = Thayer Blue
+	description = Thayer Blue 5-B
+	primaryColor = #b0becb
+	secondaryColor = #d5d5d5
+}
 
 @PART[ship_*] {
 	@crashTolerance = 2000
@@ -28,12 +69,12 @@ VARIANTTHEME {
 		name = ModulePartVariants
 		primaryColor = #d5d5d5
 		secondaryColor = #384864
-		baseDisplayName = Gray 5-SB
-		baseThemeName = Gray
+		baseDisplayName = Grey 5-SB
+		baseThemeName = Grey5SB
 		VARIANT	{
 			name = White
 			displayName = White
-			themeName = Gray
+			themeName = WhiteHull
 			primaryColor = #d5d5d5
 			secondaryColor = #d5d5d5
 			TEXTURE	{
@@ -44,7 +85,7 @@ VARIANTTHEME {
 		VARIANT	{
 			name = Planks
 			displayName = Planks
-			themeName = Gray
+			themeName = Planks
 			primaryColor = #d5d5d5
 			secondaryColor = #8c5f40
 			TEXTURE	{
@@ -53,31 +94,31 @@ VARIANTTHEME {
 			}
 		}
 		VARIANT	{
-			name = Gray
-			displayName = Gray 5-D
-			themeName = Gray
+			name = Grey5D
+			displayName = Grey 5-D
+			themeName = Grey5D
 			primaryColor = #737985
 			secondaryColor = #d5d5d5
 			TEXTURE	{
 				materialName = Ships
-				mainTextureURL = KKA/Ships/ShipGray
+				mainTextureURL = KKA/Ships/ShipGrey
 			}
 		}
 		VARIANT	{
-			name = Gray
-			displayName = Gray 5-D
-			themeName = Gray
+			name = Grey5DB
+			displayName = Grey 5-D
+			themeName = Grey5DB
 			primaryColor = #737985
 			secondaryColor = #384864
 			TEXTURE	{
 				materialName = Ships
-				mainTextureURL = KKA/Ships/ShipGrayBlue
+				mainTextureURL = KKA/Ships/ShipGreyBlue
 			}
 		}
 		VARIANT	{
-			name = Sea Blue
+			name = SeaBlue5S
 			displayName = Sea Blue 5-S
-			themeName = Gray
+			themeName = SeaBlue5S
 			primaryColor = #52617c
 			secondaryColor = #d5d5d5
 			TEXTURE	{
@@ -86,9 +127,9 @@ VARIANTTHEME {
 			}
 		}
 		VARIANT	{
-			name = Thayer Blue
+			name = ThayerBlue5B
 			displayName = Thayer Blue 5-B
-			themeName = Gray
+			themeName = ThayerBlue5B
 			primaryColor = #b0becb
 			secondaryColor = #d5d5d5
 			TEXTURE	{
